Nl translation ported to master (#2894)
* Add files via upload

DUTCH : New file for mapfishapp i18n, a bunch of them will follow...

* nl added

* nl added

* nl added

* nl added

* nl added, 7 addons left : atlas, bangeocoder, cadastre, magnifier, notes, openls, template

* indentation correction test

* indentation fix

* nl added

* minor fixes

* : to =

* general logic

* missing translation

* general logic

* logic fixed

* logic fixed

* added Styler/lang/nl.js

* styler submodule updated

Co-authored-by: bendeg <bendeg@users.noreply.github.com>

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -103,3 +103,16 @@ include =
     Styler/lang/de.js
     locale/ext-lang-de.js
 
+[lang/nl.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
+    ../src/main/webapp/lib/externals/styler/lib
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/nl.js
+include =
+    GEOR_Lang/nl.js
+    Styler/lang/nl.js
+    locale/ext-lang-nl.js
