--- a/src/main/webapp/app/addons/annotation/config.json
+++ b/src/main/webapp/app/addons/annotation/config.json
@@ -6,12 +6,14 @@
             "en": "Drawing tools",
             "es": "Herramientas de dibujo",
             "fr": "Outils de dessin",
-            "de": "Malutensilien"
+            "de": "Malutensilien",
+            "nl": "Tekengereedschap"
         },
         "description": {
             "en": "A bunch of tools to annotate the map by drawing different kind of shapes.",
             "es": "Una serie de herramientas para anotar el mapa dibujando diferentes formas.",
             "fr": "Une série d'outils pour annoter la carte en dessinant différentes formes.",
-            "de": "Utensilienauswahl zur Kartenmarkierung mittels unterschiedlicher Formen"
+            "de": "Utensilienauswahl zur Kartenmarkierung mittels unterschiedlicher Formen",
+            "nl": "Een reeks hulpmiddelen om de kaart van aantekeningen te voorzien door verschillende vormen te tekenen"
         }
 }]
