--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -178,6 +178,48 @@
             "annotation.name": "Name",
             "annotation.no_title": "Ohne Titel",
             "annotation.fillOpacity": "Opazität"
+        },
+        "nl": {
+            "annotation.drawing_tools": "Hulpmiddelen voor tekenen",
+            "annotation.delete_feature": "Object verwijderen",
+            "annotation.delete_confirm": "Weet u zeker dat u dit object wilt verwijderen ?",
+            "annotation.delete": "Verwijderen",
+            "annotation.delete_all": "Alles verwijderen",
+            "annotation.export_as_kml": "Exporteren",
+            "annotation.export_as_kml_tip": "Exporteren als KML",
+            "annotation.save": "Opslaan",
+            "annotation.save_tip": "Sla de getekende entiteiten lokaal op",
+            "annotation.load": "Laden",
+            "annotation.load_tip": "Eerder opgeslagen entiteiten laden",
+            "annotation.modify": "Bewerken",
+            "annotation.linestring": "Lijn",
+            "annotation.multilinestring": "Multilijn",
+            "annotation.point": "Punt",
+            "annotation.circle": "Cirkel",
+            "annotation.box": "Rechthoek",
+            "annotation.multipoint": "Multipunt",
+            "annotation.polygon": "Polygoon",
+            "annotation.multipolygon": "Multipolygoon",
+            "annotation.label": "Label",
+            "annotation.create_point": "Maak punt",
+            "annotation.create_circle": "Maak cirkel",
+            "annotation.create_box": "Maak Rechthoek",
+            "annotation.create_line": "Maak lijn",
+            "annotation.create_polygon": "Maak polygoon",
+            "annotation.create_label": "Maak label",
+            "annotation.delete_all_features": "Verwijder alle objecten",
+            "annotation.delete_features_confirm": "Weet u zeker dat u alle objecten wilt verwijderen ?",
+            "annotation.close": "Sluiten",
+            "annotation.style": "Stijl",
+            "annotation.size": "Grootte",
+            "annotation.fontsize": "Grootte",
+            "annotation.strokewidth": "Dikte",
+            "annotation.color": "Kleur",
+            "annotation.fillcolor": "Vulling",
+            "annotation.outlinecolor": "Randkleur",
+            "annotation.name": "Naam",
+            "annotation.no_title": "Zonder titel",
+            "annotation.fillOpacity": "Ondoorzichtheid kleur"
         }
     }
 }
