--- a/src/main/webapp/app/addons/atlas/manifest.json
+++ b/src/main/webapp/app/addons/atlas/manifest.json
@@ -179,6 +179,47 @@
             "atlas_too_many_features_after_nb": " features.",
             "atlas_no_pages": "There is no atlas pages to print.",
             "atlas_form_invalid": "Invalid form"
+        },
+        "nl": {
+            "atlas_failed": "Het genereren van de atlas is mislukt",
+            "atlas_features": "objecten",
+            "atlas_atlaslayer": "Atlas laag",
+            "atlas_emptylayer": "Selecteer een laag...",
+            "atlas_layout": "Lay-out",
+            "atlas_selectlayout": "Kies een lay-out",
+            "atlas_displaylegend": "Toon de legende",
+            "atlas_format": "Formaat",
+            "atlas_mapdpi": "Resolutie (dpi)",
+            "atlas_scale": "Schaal",
+            "atlas_selectscale": "Selecteer de schaal...",
+            "atlas_selectdpi": "Selecteer de resolutie",
+            "atlas_scalemanual": "Handmatige schaal",
+            "atlas_scaleauto": "Betere schaal",
+            "atlas_pagetitle": "Titel",
+            "atlas_sametitle": "Dezelfde titel voor alle pagina's",
+            "atlas_fieldtitle": "Gebruik een veld als titel",
+            "atlas_fieldfortitle": "Veld",
+            "atlas_title": "Titel",
+            "atlas_fieldfortitleselect": "Selecteer een veld als titel",
+            "atlas_pagesubtitle": "Ondertiteling",
+            "atlas_samesubtitle": "Dezelfde ondertiteling voor alle pagina's",
+            "atlas_fieldsubtitle": "Gebruik een veld als ondertiteling",
+            "atlas_fieldforsubtitle": "Veld",
+            "atlas_subtitle": "Ondertiteling",
+            "atlas_fieldforsubtitleselect": "Selecteer het ondertitelveld",
+            "atlas_outputfilename": "Atlasnaam",
+            "atlas_fieldprefix": "Achtervoegsel",
+            "atlas_fieldforprefix": "Selecteer het veld dat als achtervoegsel moet worden gebruikt",
+            "atlas_emaillabel": "De downloadlink voor de atlas wordt per e-mail naar het adres verzonden",
+            "atlas_submit": "Verzenden",
+            "atlas_cancel": "Annuleren",
+            "atlas_connect_printserver_error": "Kan geen verbinding maken met de printserver",
+            "atlas_submit_success": "Het printverzoek is succesvol verzonden naar de server",
+            "atlas_submit_fail": "De verzending van het afdrukverzoek is mislukt",
+            "atlas_too_many_features": "Het aantal entiteiten is groter dan de limiet die is toegestaan voor het genereren van de atlas, start het genereren van de atlas uit het resultatenvenster opnieuw met minder ",
+            "atlas_too_many_features_after_nb": " entiteiten.",
+            "atlas_no_pages": "Geen atlas-pagina om af te drukken",
+            "atlas_form_invalid": "Ongeldige vorm"
         }
     }
 }
