--- a/src/main/webapp/app/addons/backgrounds/config.json
+++ b/src/main/webapp/app/addons/backgrounds/config.json
@@ -5,12 +5,14 @@
     "title": {
         "en": "Background layers",
         "es": "Capas de fondo",
-        "fr": "Fonds de plan"
+        "fr": "Fonds de plan",
+        "nl": "Basislaag"
     },
     "description": {
         "en": "Select a background layer",
         "es": "Seleccione una capa de fondo",
-        "fr": "Sélectionnez une couche de fond"
+        "fr": "Sélectionnez une couche de fond",
+        "nl": "Selecteer een basislaag"
     },
     "options": {
         "target": "tbar_12",
