--- a/src/main/webapp/app/addons/backgrounds/manifest.json
+++ b/src/main/webapp/app/addons/backgrounds/manifest.json
@@ -41,6 +41,9 @@
         },
         "de": {
             "backgrounds.reset": "Keine"
+        },
+        "nl": {
+            "backgrounds.reset": "Geen"
         }
     }
 }
