--- a/src/main/webapp/app/addons/coordinates/config.json
+++ b/src/main/webapp/app/addons/coordinates/config.json
@@ -6,13 +6,15 @@
         "en": "Coordinates",
         "es": "Coordenadas",
         "fr": "Coordonnées",
-        "de": "Koordinaten"
+        "de": "Koordinaten",
+        "nl": "Coördinaten"
     },
     "description": {
         "en": "Get pixel coordinates",
         "es": "Obtener coordenadas de píxeles",
         "fr": "Obtenir les coordonnées d'un point",
-        "de": "Holen Sie sich die Koordinaten eines Punktes"
+        "de": "Holen Sie sich die Koordinaten eines Punktes",
+        "nl": "Coördinaten van een punt op de kaart verkrijgen"
     },
     "options": {
         "target": "bbar_3",
