--- a/src/main/webapp/app/addons/magnifier/config.json
+++ b/src/main/webapp/app/addons/magnifier/config.json
@@ -6,12 +6,14 @@
             "en": "Aerial imagery magnifier",
             "es": "Lupa ortofoto",
             "fr": "Loupe orthophoto",
-            "de": "Ortofoto Lupe"
+            "de": "Ortofoto Lupe",
+            "nl": "Orthofoto loep"
         },
         "description": {
             "en": "A tool which allows to zoom in an aerial image on a map portion",
             "es": "Una herramienta que permite hacer un zoom sobre una parte del mapa ortofoto",
             "fr": "Un outil qui permet de zoomer dans une orthophoto sur une portion de la carte",
-            "de": "Utensil erlaubt Zoom mittels orthofoto auf Kartenbereich"
+            "de": "Utensil erlaubt Zoom mittels orthofoto auf Kartenbereich",
+            "nl": "Een hulpmiddel waarmee u kunt inzoomen op een orthofoto op een deel van de kaart"
         }
 }]
