--- a/src/main/webapp/app/addons/quicksearch/config.json
+++ b/src/main/webapp/app/addons/quicksearch/config.json
@@ -8,7 +8,8 @@
                 "fr": "<b>Recherche rapide d'une référence</b><br>Tapez \"d numero_de_dossier\" pour obtenir l'affichage du dossier",
                 "en": "<b>Quick reference search</b><br>Type \"d numero_de_dossier\" to view the folder",
                 "es": "<b>Búsqueda rápida de una referencia</b><br>Ingresar el \"d numero_de_dossier\" para visualizar la carpeta",
-                "de": "..."
+                "de": "...",
+                "nl": "..."
             },
             "searches": [{
                 "pattern": "d ([0-9]+)",
@@ -40,12 +41,14 @@
             "en": "Quick Search",
             "fr": "Recherche rapide",
             "es": "Búsqueda rápida",
-            "de": "Schnellsuche"
+            "de": "Schnellsuche",
+            "nl": "Snel zoeken"
         },
         "description": {
             "en": "Quick search your favorite objects",
             "fr": "Trouvez en quelques secondes vos objets",
             "de": "Finden Sie Ihre Artikel innerhalb von Sekunden",
-            "es": "Encuentra tus artículos en segundos"
+            "es": "Encuentra tus artículos en segundos",
+            "nl": "Snel zoeken naar uw favoriete objecten van WFS-services"
         }
 }]
