--- a/src/main/webapp/app/addons/quicksearch/manifest.json
+++ b/src/main/webapp/app/addons/quicksearch/manifest.json
@@ -26,6 +26,9 @@
         },
         "de": {
             "addon_qs_emptyText": "Suchen..."
+        },
+        "nl": {
+            "addon_qs_emptyText": "Zoeken..."
         }
     }
 }
