--- a/src/main/webapp/app/addons/template/manifest.json
+++ b/src/main/webapp/app/addons/template/manifest.json
@@ -27,6 +27,9 @@
         },
         "de": {
             "addon_template_sample_message": "Beispielmeldungin Deutsch"
+        },
+        "nl": {
+            "addon_template_sample_message": "Voorbeeld van een bericht in het Nederlands"
         }
     }
 }
