--- a/src/main/webapp/app/addons/bangeocoder/config.json
+++ b/src/main/webapp/app/addons/bangeocoder/config.json
@@ -5,12 +5,14 @@
     "title": {
         "en": "Address search from the BAN",
         "es": "Búsqueda de dirección en la BAN",
-        "fr": "Recherche d'adresse sur la BAN"
-    },
+        "fr": "Recherche d'adresse sur la BAN",
+        "nl": "Zoeken op adres van het BAN"
+	 },
     "description": {
         "en": "Address search from the National Addresses Database (France)",
         "es": "Búsqueda de dirección en la Base Nacional de Direcciones (Francia)",
-        "fr": "Recherche d'adresses dans la Base Addresse Nationale (France)"
+        "fr": "Recherche d'adresses dans la Base Addresse Nationale (France)",
+        "nl": "Zoeken naar adressen in de nationale adresdatabase (Frankrijk)"
     },
     "options": {
         "limitResponse": 5
