--- a/src/main/webapp/app/addons/measure/config.json
+++ b/src/main/webapp/app/addons/measure/config.json
@@ -7,12 +7,14 @@
         "en": "Measurement tools",
         "es": "Herramientas de medición",
         "fr": "Outils de mesure",
-        "de": "Messwerkzeuge"
+        "de": "Messwerkzeuge",
+        "nl": "Meetinstrumenten"
     },
     "description": {
         "en": "Distance and area measuring tools",
         "es": "Herramientas de medición de superficies y distancias",
         "fr": "Outils de mesure de distances et de surfaces",
-        "de": "Werkzeuge zum Messen von Entfernungen und Flächen"
+        "de": "Werkzeuge zum Messen von Entfernungen und Flächen",
+        "nl": "Afstands- en oppervlaktemeetinstrumenten"
     }
 }]
