--- a/src/main/webapp/app/addons/measurements/config.json
+++ b/src/main/webapp/app/addons/measurements/config.json
@@ -7,12 +7,14 @@
         "en": "Advanced measurement tools",
         "es": "Herramientas de medición avanzada",
         "fr": "Outils de mesure avancés",
-        "de": "Erweiterte Messwerkzeuge"
+        "de": "Erweiterte Messwerkzeuge",
+        "nl": "Geavanceerde meetinstrumenten"
     },
     "description": {
         "en": "Distance and area measuring tools. Measures are cumulative, they can also be printed & exported.",
         "es": "Herramientas de medición de superficies y distancias. Las medidas son acumulativas, y también se pueden imprimir y exportar.",
         "fr": "Outils de mesure de distances et de surfaces. Les mesures sont persistantes, et peuvent être imprimées & exportées.",
-        "de": "Werkzeuge zum Messen von Entfernungen und Flächen. Die Messungen können auch gedruckt und exportiert werden."
+        "de": "Werkzeuge zum Messen von Entfernungen und Flächen. Die Messungen können auch gedruckt und exportiert werden.",
+        "nl": "Afstands- en oppervlaktemeetinstrumenten. Maatregelen zijn cumulatief, ze kunnen ook worden afgedrukt en geëxporteerd"
     }
 }]
