--- a/src/main/webapp/app/addons/osm2geor/manifest.json
+++ b/src/main/webapp/app/addons/osm2geor/manifest.json
@@ -13,7 +13,8 @@
                 "en": "Amenities",
                 "es": "Comodidades",
                 "fr": "Equipements",
-                "de": "Ausstattung"
+                "de": "Ausstattung",
+                "nl": "Uitrusting"
             },
             "query": "node[\"amenity\"]{{BBOX}};way[\"amenity\"]{{BBOX}};"
         }, {
@@ -21,7 +22,8 @@
                 "en": "Shops",
                 "es": "Comercios",
                 "fr": "Commerces",
-                "de": "Geschäfte"
+                "de": "Geschäfte",
+                "nl": "Handel"
             },
             "query": "node[\"shop\"]{{BBOX}};way[\"shop\"]{{BBOX}};"
         }, {
@@ -29,7 +31,8 @@
                 "en": "Historic",
                 "es": "Patrimonio",
                 "fr": "Patrimoine",
-                "de": "Heritage"
+                "de": "Heritage",
+                "nl": "Erfgoed"
             },
             "query": "node[\"historic\"]{{BBOX}};way[\"historic\"]{{BBOX}};"
         }, {
@@ -37,7 +40,8 @@
                 "en": "Leisures",
                 "es": "Intereses",
                 "fr": "Loisirs",
-                "de": "Interessen"
+                "de": "Interessen",
+                "nl": "Recreatie"
             },
             "query": "node[\"leisure\"]{{BBOX}};way[\"leisure\"]{{BBOX}};"
         }, {
@@ -45,7 +49,8 @@
                 "en": "Emergencies",
                 "es": "Emergencias",
                 "fr": "Urgences",
-                "de": "Notfälle"
+                "de": "Notfälle",
+                "nl": "Noodgevallen"
             },
             "query": "node[\"emergency\"]{{BBOX}};way[\"emergency\"]{{BBOX}};"
         }, {
@@ -53,7 +58,8 @@
                 "en": "Man made",
                 "es": "Edificios",
                 "fr": "Edifices",
-                "de": "Gebäude"
+                "de": "Gebäude",
+                "nl": "Gebouwen"
             },
             "query": "node[\"man_made\"]{{BBOX}};way[\"man_made\"]{{BBOX}};"
         }, {
@@ -61,7 +67,8 @@
                 "en": "Natural",
                 "es": "Naturaleza",
                 "fr": "Nature",
-                "de": ""
+                "de": "Natur",
+                "nl": "Natuur"
             },
             "query": "node[\"natural\"]{{BBOX}};way[\"natural\"]{{BBOX}};"
         }, {
@@ -69,7 +76,8 @@
                 "en": "Places",
                 "es": "Toponimia",
                 "fr": "Toponymie",
-                "de": "Toponymy"
+                "de": "Toponymy",
+                "nl": "Plaatsnamen"
             },
             "query": "node[\"place\"]{{BBOX}};way[\"place\"]{{BBOX}};"
         }, {
@@ -77,7 +85,8 @@
                 "en": "Power",
                 "es": "Energía",
                 "fr": "Energie",
-                "de": "Macht"
+                "de": "Macht",
+                "nl": "Energie"
             },
             "query": "node[\"power\"]{{BBOX}};way[\"power\"]{{BBOX}};"
         }, {
@@ -85,7 +94,8 @@
                 "en": "Railways",
                 "es": "Ferrocarriles",
                 "fr": "Voies ferrées",
-                "de": "Eisenbahnen"
+                "de": "Eisenbahnen",
+                "nl": "Spoorbanen"
             },
             "query": "node[\"railway\"]{{BBOX}};way[\"railway\"]{{BBOX}};"
         }, {
@@ -93,7 +103,8 @@
                 "en": "Sports",
                 "es": "Deportes",
                 "fr": "Sports",
-                "de": "Sport"
+                "de": "Sport",
+                "nl": "Sport"
             },
             "query": "node[\"sport\"]{{BBOX}};way[\"sport\"]{{BBOX}};"
         }, {
@@ -101,7 +112,8 @@
                 "en": "Tourism",
                 "es": "Turismo",
                 "fr": "Tourisme",
-                "de": "Tourismus"
+                "de": "Tourismus",
+                "nl": "Toerisme"
             },
             "query": "node[\"tourism\"]{{BBOX}};way[\"tourism\"]{{BBOX}};"
         }, {
@@ -109,7 +121,8 @@
                 "en": "Waterways",
                 "es": "Cursos de agua",
                 "fr": "Cours d'eau",
-                "de": "Wasserstraßen"
+                "de": "Wasserstraßen",
+                "nl": "Waterloop"
             },
             "query": "node[\"waterway\"]{{BBOX}};way[\"waterway\"]{{BBOX}};"
         }, {
@@ -117,7 +130,8 @@
                 "en": "Roads",
                 "es": "Carreteras",
                 "fr": "Routes",
-                "de": "Strassen"
+                "de": "Strassen",
+                "nl": "Wegen"
             },
             "query": "way[\"highway\"]{{BBOX}};"
         }, {
@@ -125,7 +139,8 @@
                 "en": "Pictures",
                 "es": "Imágenes",
                 "fr": "Images",
-                "de": "Bilder"
+                "de": "Bilder",
+                "nl": "Afbeelding"
             },
             "query": "node[\"image\"]{{BBOX}};"
         }, {
@@ -133,7 +148,8 @@
                 "en": "Point object by its proper name",
                 "es": "Punto objeto por su nombre propio",
                 "fr": "Objet ponctuel par son nom exact",
-                "de": "Point-Objekt beim Namen"
+                "de": "Point-Objekt beim Namen",
+                "nl": "Punt object met zijn exacte naam"
             },
             "query": "node[\"name\"=\"Hôtel du Lion d'Or\"]{{BBOX}};"
         }, {
@@ -141,7 +157,8 @@
                 "en": "Point Object, knowing the beginning of its name",
                 "es": "Objeto punto, sabiendo el inicio de su nombre",
                 "fr": "Objet ponctuel, connaissant le début de son nom",
-                "de": "Punktobjekt, zu wissen, den Anfang seines Namens"
+                "de": "Punktobjekt, zu wissen, den Anfang seines Namens",
+                "nl": "Punt object als men het begin van zijn naam kent"
             },
             "query": "node[\"name\"~\"^Hôtel\"]{{BBOX}};"
         }, {
@@ -149,7 +166,8 @@
                 "en": "Point Object, knowing the beginning of its name, case insensitive",
                 "es": "Objeto punto, sabiendo el inicio de su nombre, respetando mayúsculas y minúsculas",
                 "fr": "Objet ponctuel, connaissant le début de son nom, insensible à la casse",
-                "de": "Punktobjekt, zu wissen, den Anfang seines Namens, Groß- und Kleinschreibung"
+                "de": "Punktobjekt, zu wissen, den Anfang seines Namens, Groß- und Kleinschreibung",
+                "nl": "Punt object als men het begin van zijn naam kent, niet hoofdlettergevoelig"
             },
             "query": "node[\"name\"~\"[hH]ôtel\"]{{BBOX}};"
         }, {
@@ -157,7 +175,8 @@
                 "en": "All bus stops with shelters",
                 "es": "Todas las paradas de autobús con cobertizo",
                 "fr": "Tous les arrêts de bus avec abris",
-                "de": "Alle Bushaltestellen mit Unterständen"
+                "de": "Alle Bushaltestellen mit Unterständen",
+                "nl": "Alle bushaltes met schuilplaatsen"
             },
             "query": "node[\"highway\"=\"bus_stop\"][\"shelter\"=\"yes\"]{{BBOX}};"
         }, {
@@ -165,7 +184,8 @@
                 "en": "All points with a name, which are not amenities",
                 "es": "Todos los puntos con un nombre, que no son equipos",
                 "fr": "Tous les points avec un nom, qui ne sont pas des équipements",
-                "de": "Alle Punkte mit einem Namen, der nicht Geräte sind"
+                "de": "Alle Punkte mit einem Namen, der nicht Geräte sind",
+                "nl": "Alle punten met een naam, die geen voorzieningen zijn"
             },
             "query": "node[\"name\"!~\"\"][\"amenity\"!~\".\"]{{BBOX}};"
         }],
@@ -174,7 +194,8 @@
                 "en": "Yellow",
                 "es": "Amarillo",
                 "fr": "Jaune",
-                "de": "Gelb"
+                "de": "Gelb",
+                "nl": "Geel"
             },
             "style": "{\"strokeColor\": \"#ffff00\", \"fillColor\": \"#ffff00\"}"
         }, {
@@ -182,7 +203,8 @@
                 "en": "Yellow with label",
                 "es": "Amarillo con etiqueta",
                 "fr": "Jaune avec étiquettes",
-                "de": "Gelb mit Etikette"
+                "de": "Gelb mit Etikette",
+                "nl": "Geel met label"
             },
             "style": "{\"strokeColor\": \"#ffff00\", \"fillColor\": \"#ffff00\", \"label\": \"${_name}\", \"labelYOffset\": \"15\",\"labelOutlineColor\": \"white\", \"labelOutlineWidth\": 3}"
         }, {
@@ -190,7 +212,8 @@
                 "en": "Red",
                 "es": "Rojo",
                 "fr": "Rouge",
-                "de": "Rot"
+                "de": "Rot",
+                "nl": "Rood"
             },
             "style": "{\"strokeColor\": \"#ff0000\", \"fillColor\": \"#ff0000\"}"
         }, {
@@ -198,7 +221,8 @@
                 "en": "Red with label",
                 "es": "Rojo con etiqueta",
                 "fr": "Rouge avec étiquettes",
-                "de": "Rot mit Etikette"
+                "de": "Rot mit Etikette",
+                "nl": "Rood met label"
             },
             "style": "{\"strokeColor\": \"#ff0000\", \"fillColor\": \"#ff0000\", \"label\": \"${_name}\", \"labelYOffset\": \"15\",\"labelOutlineColor\": \"white\", \"labelOutlineWidth\": 3}"
         }, {
@@ -206,7 +230,8 @@
                 "en": "Orange",
                 "es": "Anaranjado",
                 "fr": "Orange",
-                "de": "Orange"
+                "de": "Orange",
+                "nl": "Oranje"
             },
             "style": "{\"fillColor\": \"#ee9900\", \"fillOpacity\": 0.4, \"strokeColor\": \"#ee9900\", \"strokeOpacity\": 1, \"strokeWidth\": 1, \"strokeLinecap\": \"round\", \"strokeDashstyle\": \"solid\", \"pointRadius\": 6}"
         }, {
@@ -214,7 +239,8 @@
                 "en": "Orange with label",
                 "es": "Anaranjado con etiqueta",
                 "fr": "Orange avec étiquettes",
-                "de": "Orange mit Etikette"
+                "de": "Orange mit Etikette",
+                "nl": "Oranje met label"
             },
             "style": "{\"fillColor\": \"#ee9900\", \"fillOpacity\": 0.4, \"strokeColor\": \"#ee9900\", \"strokeOpacity\": 1, \"strokeWidth\": 1, \"strokeLinecap\": \"round\", \"strokeDashstyle\": \"solid\", \"pointRadius\": 6, \"label\": \"${_name}\", \"labelYOffset\": \"15\",\"labelOutlineColor\": \"white\", \"labelOutlineWidth\": 3}"
         }, {
@@ -222,7 +248,8 @@
                 "en": "Pictures",
                 "es": "Imágenes",
                 "fr": "Images",
-                "de": "Bilder"
+                "de": "Bilder",
+                "nl": "Afbeeldingen"
             },
             "style": "{\"externalGraphic\": \"${image}\", \"graphicWidth\": 100, \"graphicHeight\": 100, \"graphicOpacity\": 1}"
         }]
@@ -279,6 +306,19 @@
             "osm2geor_nopolygon": "Cannot perform query with a linear or point geometry",
             "osm2geor_multipolygon": "Cannot perform query with a multipolygon, sorry !",
             "osm2geor_help_url": "http://wiki.openstreetmap.org/wiki/DE:Overpass_API/Language_Guide"
+        },
+        "nl": {
+            "osm2geor_layername": "OSM-gegevens",
+            "osm2geor_query": "Zoekopdracht",
+            "osm2geor_style": "Stijl",
+            "osm2geor_keepfeatures": "Bewaar eerder geladen objecten",
+            "osm2geor_run": "Uitvoeren",
+            "osm2geor_syntaxerror": "Syntaxisfout",
+            "osm2geor_cannotget": "Kon de objecten niet uit de OSM-database halen",
+            "osm2geor_nostoredgeom": "Kan {{GEOMETRY}} niet gebruiken omdat er momenteel geen geometrie is opgeslagen",
+            "osm2geor_nopolygon": "Kan geen query uitvoeren met een lineaire of puntgeometrie",
+            "osm2geor_multipolygon": "Kan geen zoekopdracht uitvoeren met een multipolygoon, sorry!",
+            "osm2geor_help_url": "http://wiki.openstreetmap.org/wiki/NL:Overpass_API/Language_Guide"
         }
     }
 }
