--- a/src/main/webapp/app/addons/osmeditors/config.json
+++ b/src/main/webapp/app/addons/osmeditors/config.json
@@ -15,12 +15,14 @@
         "en": "Edit in OSM",
         "fr": "Édition dans OSM",
         "es": "Edición en OSM",
-        "de": "Bearbeiten in OSM"
+        "de": "Bearbeiten in OSM",
+        "nl": "Bewerken in OSM"
     },
     "description": {
         "en": "Lauch an edit session of the collaborative map OpenStreetMap for current geographic extent",
         "fr": "Lancer l'édition de la carte collaborative OpenStreetMap pour la zone présentée dans le visualisateur",
         "es": "Comenzar a editar el mapa colaborativo OpenStreetMap para el área que se muestra en el visor",
-        "de": "Starten Sie die OpenStreetMap kollaborative Karte für die im Viewer angezeigt Bereich Bearbeitung"
+        "de": "Starten Sie die OpenStreetMap kollaborative Karte für die im Viewer angezeigt Bereich Bearbeitung",
+        "nl": "Begin met het bewerken van de OpenStreetMap-samenwerkingskaart voor het gebied dat wordt gepresenteerd in de viewer"
     }
 }]
