--- a/src/main/webapp/app/addons/streetview/config.json
+++ b/src/main/webapp/app/addons/streetview/config.json
@@ -6,13 +6,15 @@
             "en": "StreetView",
             "fr": "StreetView",
             "es": "StreetView",
-            "de": "StreetView"
+            "de": "StreetView",
+            "nl": "StreetView"
         },
         "description": {
             "en": "Get a detailed view of a place you choose on the map",
             "es": "Obtener una vista detallada de un lugar que usted elija en el mapa",
             "fr": "Obtenez une vue détaillée d'un endroit que vous choisissez sur la carte",
-            "de": "Sehen Sie eine Detailansicht eines Ortes, den Sie auf der Karte auswählen"
+            "de": "Sehen Sie eine Detailansicht eines Ortes, den Sie auf der Karte auswählen",
+            "nl": "Krijg een gedetailleerd overzicht van een locatie die u op de kaart kiest"
         },
         "options": {
             "api_key": "AIzaSyDSPmOyzuhJA_tM5_RF0tLLIuQFV6sBJ1U",
