--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
@@ -25,19 +25,10 @@
             <param-value>WARN</param-value>
         </init-param>
     </filter>
-   <filter>
-        <filter-name>UTF8Filter</filter-name>
-        <filter-class>org.georchestra.mapfishapp.UTF8Filter</filter-class>
-    </filter>
     <filter-mapping>
         <filter-name>UrlRewriteFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <filter-mapping>
-        <filter-name>UTF8Filter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
 	<!-- servlets -->
 	<servlet>
 	    <servlet-name>mapfish.print</servlet-name>
