--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
       <groupId>org.mapfish.print</groupId>
       <artifactId>print-lib</artifactId>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.12.1</version>
+    </dependency>
     <!-- Note: the print module also depends on slf4j -->
     <dependency>
       <groupId>org.slf4j</groupId>
